Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1471,7 +1471,7 @@
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-content-for": "Vyberte obsah pro %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Odtud můžete přidat soubor — vyberte jej a nahrajte ze svého počítače. Stiskněte tlačítko 'Žádný', pokud chcete nevybrat žádnou možnost.",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
@@ -1556,7 +1556,7 @@
     "sort-by-date-desc": "Seřadit podle data sestupně",
     "sort-by-debit-asc": "Seřadit podle debetu vzestupně",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Seřadit podle popisu vzestupně",
     "sort-by-description-desc": "Seřadit podle popisu sestupně",
     "sort-by-price-asc": "Seřadit podle ceny vzestupně",
     "sort-by-price-desc": "Seřadit podle ceny sestupně",
