--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1558,7 +1558,7 @@
     "sort-by-debit-desc": "Nach Soll absteigend sortieren",
     "sort-by-description-asc": "Nach Beschreibung aufsteigend sortieren",
     "sort-by-description-desc": "Nach Beschreibung absteigend sortieren",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Nach Preis aufsteigend sortieren",
     "sort-by-price-desc": "Nach Preis absteigend sortieren",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
