--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -611,7 +611,7 @@
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-exception-location-rules": "Hiszpania: N2 Niepodlegające opodatkowaniu – Zasady ustalania miejsca świadczenia usług (art. 69–70 LIVA, usługi B2B w UE lub poza UE)",
     "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Operacje zwolnione na podstawie art. 25 ustawy o IGIC",
     "es-tax-exception-passive-subject": "Wyjątek podatkowy (podmiot bierny)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
@@ -845,7 +845,7 @@
     "interest": "Odsetki",
     "international-identifier": "Identyfikator międzynarodowy",
     "intra-community": "Intracomunitaria",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "Nazwa użytkownika administratora jest nieprawidłowa: musi mieć od 3 do 50 znaków, bez spacji.",
     "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
     "invalid-column-lenght": "%column% musi mieć od %min% do %max% znaków.",
     "invalid-date": "Data %date% jest nieprawidłowa.",
