Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostra quantitat en la impressió",
     "show-section-new": "Mostra la secció crear",
     "signature": "Signatura",
+    "signed": "Signat",
     "simple": "Simple",
     "simplified": "Simplificada",
     "size": "Mida",
