--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Menge bei Druck anzeigen",
     "show-section-new": "Neuen Abschnitt anzeigen",
     "signature": "Unterschrift",
+    "signed": "U",
     "simple": "Einfach",
     "simplified": "Vereinfacht",
     "size": "Größe",
