--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Show quantity on print",
     "show-section-new": "Show create section",
     "signature": "Signature",
+    "signed": "Signed",
     "simple": "Simple",
     "simplified": "Simplified",
     "size": "Size",
