--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Kopurua inprimatzean bistaratu",
     "show-section-new": "Sortu atalik erakutsi",
     "signature": "Sinadura",
+    "signed": "Sinatua",
     "simple": "Sinplea",
     "simplified": "Simplifikatua",
     "size": "Tamaina",
