--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Afficher la quantité sur l'impression",
     "show-section-new": "Afficher la section de création",
     "signature": "Signature",
+    "signed": "Signé",
     "simple": "Simple",
     "simplified": "Simplifié",
     "size": "taille",
@@ -1807,7 +1808,7 @@
     "vat-document": "Document de TVA",
     "vat-exception": "Dérogation à la TVA",
     "vat-number-is-short": "Le numéro \"%vat-number%\" est trop court",
-    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
+    "vat-number-not-valid": "%vat-number% n'est pas enregistré dans le VIES",
     "vat-number-not-vies": "Le numéro \"%vat-number%\" n'est pas enregistré dans le système VIES.",
     "vat-regime": "Régime de TVA",
     "VAT-register": "Livre d'impôt",
