--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostrar cantidade na impresión",
     "show-section-new": "Mostrar sección crear",
     "signature": "Sinatura",
+    "signed": "Asinado",
     "simple": "Simple",
     "simplified": "Simplificada",
     "size": "tamaño",
