--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostra la quantità sulla stampa",
     "show-section-new": "Mostra sezione creazione",
     "signature": "Firma",
+    "signed": "Firmato",
     "simple": "Semplice",
     "simplified": "semplificata",
     "size": "Dimensione",
