--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Pokaż ilość w druku",
     "show-section-new": "Pokaż sekcję tworzenia",
     "signature": "Podpis",
+    "signed": "Podpisany",
     "simple": "Prosty",
     "simplified": "Uproszczona",
     "size": "Rozmiar",
@@ -1551,7 +1552,7 @@
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Sortuj według kredytu malejąco",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
     "sort-by-debit-asc": "Sortuj według debetu rosnąco",
