--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
     "signature": "Assinatura",
+    "signed": "Assinado",
     "simple": "Simples",
     "simplified": "Simplificada",
     "size": "Tamanho",
