--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostrar la cantitat en l'impressió",
     "show-section-new": "Mostrar secció crear",
     "signature": "Signature",
+    "signed": "Signat",
     "simple": "Simple",
     "simplified": "Simplificada",
     "size": "Tamany",
