--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -598,7 +598,7 @@
     "errors": "Errores",
     "es_EC": "Španělština (Ekvádor)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Operace podléhá dani IPSI (Ceuta a Melilla)",
     "es-operation-tax-igic": "Operace podléhá IGIC (Kanárské ostrovy)",
     "es-operation-tax-other": "Operace nepodléhající výše uvedeným daním",
     "es-tax-exception-art-14": "Daňová výjimka (čl. 14)",
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostrar cantidad en la impresión",
     "show-section-new": "Zobrazit sekci pro vytvoření",
     "signature": "Firma",
+    "signed": "Podpis",
     "simple": "Simple",
     "simplified": "Zjednodušený",
     "size": "Tamaño",
