--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -1533,6 +1533,7 @@
     "show-quantity": "Mostrar cantidad en la impresión",
     "show-section-new": "Mostrar sección crear",
     "signature": "Firma",
+    "signed": "Firmado",
     "simple": "Simple",
     "simplified": "Simplificada",
     "size": "Tamaño",
