Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Einheitsgewinn",
     "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "Einzelverkaufspreis",
+    "units": "Einheiten",
     "unlimited": "Unbegrenzt",
     "unlink": "Trennen",
     "unlink-file": "Datei trennen",
