--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Unit profit",
     "unit-purchase-price": "Unit purchase price",
     "unit-sale-price": "Unit sale price",
+    "units": "Units",
     "unlimited": "Unlimited",
     "unlink": "Unlink",
     "unlink-file": "Unlink file",
