--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Mozkin unitarioa",
     "unit-purchase-price": "Unitateko erosketa prezioa",
     "unit-sale-price": "Unitateko salmenta prezioa",
+    "units": "Unitateak",
     "unlimited": "Mugagabe",
     "unlink": "Deskonektatu",
     "unlink-file": "Artxiboa lokabetu",
