--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Bénéfice à l'unité",
     "unit-purchase-price": "Prix d'achat à l'unité",
     "unit-sale-price": "Prix de vente à l'unité",
+    "units": "Unités",
     "unlimited": "Illimité",
     "unlink": "Rompre le lien",
     "unlink-file": "Rompre le lien du fichier",
