--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Profitto unit.",
     "unit-purchase-price": "Prezzo unitario di acquisto.",
     "unit-sale-price": "prezzo di vendita unitario",
+    "units": "Unità",
     "unlimited": "Illimitato",
     "unlink": "Disconnetti",
     "unlink-file": "Scollega file",
