--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1471,7 +1471,7 @@
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
     "select-content-for": "Wybierz zawartość dla %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Możesz dodać plik stąd, wybierz go i prześlij z komputera. Naciśnij przycisk 'Brak', jeśli chcesz nie wybierać żadnego pliku.",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Wybierz użytkownika",
@@ -1756,6 +1756,7 @@
     "unit-profit": "Zysk jednostkowy",
     "unit-purchase-price": "Cena zakupu jednostkowa",
     "unit-sale-price": "Cena sprzedaży jednostkowej",
+    "units": "Jednostki",
     "unlimited": "Sin límites",
     "unlink": "Odłącz",
     "unlink-file": "Odłącz plik",
