--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "lucro unitário",
     "unit-purchase-price": "Preço de compra por unidade",
     "unit-sale-price": "Preço de venda unit.",
+    "units": "Unidades",
     "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
