--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "Preço de venda unit.",
+    "units": "Unidades",
     "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
