--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
     "unit-sale-price": "unit-sale-price",
+    "units": "Unitats",
     "unlimited": "Il·limitat",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
