--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Guany unit.",
     "unit-purchase-price": "Preu compra unit.",
     "unit-sale-price": "Preu venda unit.",
+    "units": "Unitats",
     "unlimited": "Il·limitat",
     "unlink": "Desvincular",
     "unlink-file": "Desenllaçar arxiu",
