--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Precio compra unit.",
     "unit-sale-price": "Precio venta unit.",
+    "units": "Jednotky",
     "unlimited": "Neomezený",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular archivo",
