--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Precio compra unit.",
     "unit-sale-price": "Precio venta unit.",
+    "units": "Unidades",
     "unlimited": "Sin límites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular archivo",
