--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1756,6 +1756,7 @@
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Prezo compra unit.",
     "unit-sale-price": "Prezo venta unit.",
+    "units": "Unidades",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
