Ahora calculamos cuanto tiempo tarda en ejecutarse cada trabajo.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -621,7 +621,7 @@
     "es-tax-regime-gold": "Zvláštní režim investičního zlata",
     "es-tax-regime-group-entities": "Zvláštní režim skupiny subjektů",
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-oss": "Daňový režim One-Stop-Shop (OSS)",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-special-retail-traders": "Zvláštní daňový režim pro maloobchodníky",
     "es-tax-regime-special-small-business": "Zvláštní daňový režim pro malé podniky",
