--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1454,7 +1454,7 @@
     "save": "salvare",
     "save-data": "Salvare i dati",
     "save-filter": "Salva Filtro",
-    "scan-usb-devices": "Scansione dispositivi USB",
+    "scan-usb-devices": "Scansiona dispositivi USB",
     "sdk": "SDK",
     "search": "Ricerca",
     "search-customer": "Cerca cliente",
