--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1547,7 +1547,7 @@
     "solution": "Rozwiązanie",
     "sort": "Sortowanie",
     "sort-by-balance-asc": "Sortuj według salda rosnąco",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Sortuj według salda malejąco",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sortuj wg kolumny",
@@ -1559,7 +1559,7 @@
     "sort-by-debit-desc": "Sortuj według debetu malejąco",
     "sort-by-description-asc": "Sortuj według opisu (rosnąco)",
     "sort-by-description-desc": "Ordenar por descripción descendente",
-    "sort-by-price-asc": "Ordenar por precio ascendente",
+    "sort-by-price-asc": "Sortuj według ceny rosnąco",
     "sort-by-price-desc": "Sortuj według ceny malejąco",
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
     "sort-by-ref-desc": "Sortuj wg referencji malejąco",
