Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1558,7 +1558,7 @@
     "sort-by-debit-asc": "Ordina per debito crescente",
     "sort-by-debit-desc": "Ordina per dare decrescente",
     "sort-by-description-asc": "Ordina per descrizione crescente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Ordina per descrizione decrescente",
     "sort-by-price-asc": "Ordina per prezzo crescente",
     "sort-by-price-desc": "Ordina per prezzo decrescente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
