--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1615,7 +1615,7 @@
     "subtract": "Restar",
     "subtract-stock": "Restar stock",
     "success": "Éxito",
-    "successive-tract": "následná trasa",
+    "successive-tract": "Postupné doručení",
     "sum": "Součet",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
