--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -1389,7 +1389,7 @@
     "refunds": "Devoluciones",
     "register": "Registrar",
     "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Consigue un mes de patrocinio PRO registrando tu instalación de FacturaScripts (solo 1º vez). Podrás descargar uno de los plugins exclusivos para patrocinadores (ver lista de plugins para patrocinadores).",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
