Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1389,7 +1389,7 @@
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-install-ad": "Registra la instal·lació de FacturaScripts",
-    "register-install-ad-p": "Si registres la instal·lació de FacturaScripts obtindràs 1 mes de patrocini PRO, que et permet descarregar un dels nostres connectors exclusius. A més, ens ajuda obtenir estadístiques de versions del core i de PHP.",
+    "register-install-ad-p": "Si registres la instal·lació de FacturaScripts obtindràs 1 mes de patrocini PRO, que et permet descarregar un dels nostres plugins exclusius. A més, ens ajuda obtenir estadístiques de versions del core i de PHP.",
     "register-installation": "Registrar instal·lació",
     "register-installation-p": "Registri la seva instal·lació per a poder actualitzar plugins de pagament o privats.",
     "register-symbol": "#",
