--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -42,7 +42,7 @@
     "accounting-items": "Partidas contables",
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "Účetní plán musí mít alespoň 2 úrovně: účty a podúčty.",
     "accounting-possible-duplicated": "El asiento contable posiblemente está duplicado con este otro. Si no es así, para evitar este mensaje, simplemente cambie el concepto.",
     "accounting-reports": "Informes contables",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
@@ -928,7 +928,7 @@
     "last-activity": "Última conexión",
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
-    "last-duration": "Última duración",
+    "last-duration": "Poslední doba trvání",
     "last-ip": "Última IP",
     "last-month": "El mes pasado",
     "last-price-estimation": "Poslední odhad ceny",
