--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1389,7 +1389,7 @@
     "refunds": "Refunds",
     "register": "Register",
     "register-install-ad": "Register the installation of FacturaScripts.",
-    "register-install-ad-p": "If you register the installation of FacturaScripts, you will receive 1 month of PRO sponsorship, which allows you to download one of our exclusive plugins. It also helps us obtain statistics on core and PHP versions.",
+    "register-install-ad-p": "Get one month of PRO sponsorship by registering your FacturaScripts installation (only the first time). You will be able to download one of the exclusive plugins for sponsors (see the list of sponsor plugins).",
     "register-installation": "Register installation",
     "register-installation-p": "Register your installation to be able to update paid or private plugins.",
     "register-symbol": "#",
@@ -1809,7 +1809,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "VAT Exception",
     "vat-number-is-short": "The number '%vat-number%' is too short",
-    "vat-number-not-valid": "VAT number %vat-number% is not registered in VIES",
+    "vat-number-not-valid": "VAT number %vat-number% is not registered in VIES.",
     "vat-number-not-vies": "Number '%vat-number%' is not registered in VIES system",
     "vat-regime": "VAT Regime",
     "VAT-register": "VAT registration",
