--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -262,7 +262,7 @@
     "cifnif": "IFK\/IFZ",
     "cities": "Hiriak",
     "city": "Hiria",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Iragazkiak garbitu",
     "click-link-to-add": "Liburutegitik ahal dituzu artxiboak gehitu, administratzaile menuan.",
     "clone": "Bikoiztu",
     "clone-account-entry": "Bikoiztu kontabilitate idazpena",
@@ -611,8 +611,8 @@
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
     "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-n5": "IGIC Legearen 25. artikuluaren aplikazioagatik exentzat jotako operazioak",
+    "es-tax-exception-passive-subject": "Espainia: N6 subjektu pasiboaren inbertsioa (84. artikulua, LIVA)",
     "es-tax-regime-agrarian": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
     "es-tax-regime-cash-criteria": "Diru-irizpideak",
     "es-tax-regime-especial-agp": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
@@ -1546,13 +1546,13 @@
     "software": "Software",
     "solution": "Soluzioa",
     "sort": "Ordena",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Ordenatu saldoaren arabera (gorantz)",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Zutabean sailkatu",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Ordenatu kredituaren arabera (jaitsieran)",
     "sort-by-date-asc": "Ordenar por fecha asc.",
     "sort-by-date-desc": "Dataren arabera sailkatu azkenean",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
