--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1558,7 +1558,7 @@
     "sort-by-debit-asc": "Sortuj według debetu rosnąco",
     "sort-by-debit-desc": "Sortuj według debetu malejąco",
     "sort-by-description-asc": "Sortuj według opisu (rosnąco)",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Sortuj według opisu malejąco",
     "sort-by-price-asc": "Sortuj według ceny rosnąco",
     "sort-by-price-desc": "Sortuj według ceny malejąco",
     "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
