--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1389,7 +1389,7 @@
     "refunds": "Reembolsos",
     "register": "Registar",
     "register-install-ad": "Registra a instalação do FacturaScripts",
-    "register-install-ad-p": "Se registar a instalação do FacturaScripts, obterá 1 mês de patrocínio PRO, que lhe permite baixar um dos nossos plugins exclusivos. Além disso, ajuda-nos a obter estatísticas das versões do núcleo e do PHP.",
+    "register-install-ad-p": "Ganhe um mês de patrocínio PRO registrando a sua instalação do FacturaScripts (apenas na 1ª vez). Você poderá baixar um dos plugins exclusivos para patrocinadores (ver lista de plugins para patrocinadores).",
     "register-installation": "Registrar instalação",
     "register-installation-p": "Registe a sua instalação para poder atualizar plugins pagos ou privados.",
     "register-symbol": "#",
