Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1547,7 +1547,7 @@
     "solution": "Solución",
     "sort": "Orden",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Seřadit podle zůstatku sestupně",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Seřadit podle kódu sestupně",
     "sort-by-column": "Seřadit podle sloupce",
