--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -597,10 +597,10 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Erros",
     "es_EC": "Espanyol (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operació subjecta a l'IVA",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-other": "Operació no subjecta als impostos anteriors",
     "es-tax-exception-art-14": "Espanya: N4 No subjecta art. 14 LIVA – Operacions vinculades a exportacions",
     "es-tax-exception-art-7": "Espanya: N3 No subjecta art. 7 LIVA – Operacions no subjectes (aportacions, transmissió d'UEA, mostres…)",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
@@ -610,7 +610,7 @@
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operacions interiors exemptes segons l'article 10.1 de la Llei 20\/1991 de l'IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Espanya: N6 Inversió del subjecte passiu (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, ramaderia i pesca",
@@ -1546,7 +1546,7 @@
     "software": "Programari",
     "solution": "Solució",
     "sort": "Orde",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Ordenar per saldo ascendent",
     "sort-by-balance-desc": "Ordenar per saldo descendent",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
@@ -1788,7 +1788,7 @@
     "use-holes-invoices-esp": "Si desmarques l'ús d'espais en factures i en treus alguna es quedarà l'espai en la facturació i tindràs problemes amb hisenda",
     "user": "Usuari",
     "user-and-config": "Usuari i configuració",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Guia d'usuari",
     "users": "Usuaris",
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
