Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -597,7 +597,7 @@
     "error-write-cert": "Errore bat gertatu da ziurtagiria idaztean",
     "errors": "Erroreak",
     "es_EC": "Espainiako gaztelania (Ekuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "BEZaren mende dagoen eragiketa",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
     "es-operation-tax-other": "es-operation-tax-other",
@@ -620,7 +620,7 @@
     "es-tax-regime-general": "Erregimen orokorra",
     "es-tax-regime-gold": "Inbertsiorako urreraren erregimen berezia",
     "es-tax-regime-group-entities": "Entitate taldearen araubide berezia",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "One Stop Shop (IOSS) zerga erregimena",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Erregimen sinplifikatua",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
@@ -1093,7 +1093,7 @@
     "new-invoice-line-p": "Produktu bat gehitu dezakezu produktuaren botoia sakatuz edo bere erreferentzia edo barra-kodea barra-kodearen eremuan idatziz. Edo sakatu lerro-botoia produkturik gabeko lerro baterako.",
     "new-password": "Pasahitz berria",
     "new-price": "Prezio berria",
-    "new-product": "Nuevo producto",
+    "new-product": "Produktu berria",
     "new-refund": "Itzulketa berria",
     "new-subaccount": "Subkontu berri bat.",
     "new-supplier": "Hornitzaile berria",
@@ -1788,7 +1788,7 @@
     "use-holes-invoices-esp": "Fakturatzean zabor erabilera desmarkatzen baduzu eta zatira bat ezabatzen baduzu, zaborra fakturazioan geratuko da eta zeregitasun arazoa izango duzu",
     "user": "Erabiltzailea",
     "user-and-config": "Erabiltzaile eta konfigurazioa",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Erabiltzailearen gida",
     "users": "Erabiltzaileak",
     "using-apc": "APC cachea erabiliz",
     "using-filecache": "Filecache erabiliz",
