--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -856,7 +856,7 @@
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
     "invalid-token": "Token non válido",
-    "invalid-token-p": "O token de acceso para o arquivo %file% non é válido ou caducou",
+    "invalid-token-p": "O token de acceso para o ficheiro %file% non é válido ou caducou",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Enderezo web non válido",
     "invoice": "Factura",
@@ -1507,7 +1507,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. de subida de arquivos",
+    "server-accepts-filesize": "Tamaño máx. de subida de ficheiros",
     "server-software": "Software do servidor",
     "service": "Servizo",
     "services": "Servizos",
@@ -1763,8 +1763,8 @@
     "unlink-install-ok": "Instalación borrada do rexistro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
-    "unsafe-file": "Arquivo non seguro",
-    "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgunhas clases de arquivos, como este: %file%",
+    "unsafe-file": "Ficheiro non seguro",
+    "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgunhas clases de ficheiros, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
     "until-hour": "Hora fin",
